/*
 * $Id: ChangeLog,v 1.724 2003/02/16 10:49:52 fsgiudice Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-02-16 15:05 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/trpc.prg
    ! Fixed an error in compressed/async function execution (prototype was wrong)

  * source/rtl/trpccli.prg
    ! Fixed various errors in compressed/async function call.

  * tests/rpcclient.prg
    ! Added a compressed and asynchronous function call test

  * tests/rpcserver.prg
    ! AEstetics upgrades (server name and function progress)
      Server has been tested with three clients working at the same time
      in both windows and linux environment, and seems to be stable.


2003-02-16 14:05 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/trpc.prg
    ! Fixes to thread termination signaling

2003-02-16 11:45 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * makefile.bc
    + source/rtl/hbserial.prg
    + source/rtl/hbsrlraw.c
    + source/rtl/trpccli.prg
    + source/rtl/trpc.prg

2003-02-16 04:05 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/trpc.prg
    ! Fixes to some timeout issues
  * source/rtl/trpccli.prg
    ! Fixes to some timeout issues
    + Added auto-initialization of InetInit()

  + tests/rpcclient.prg
  + tests/rpcserver.prg
    + Added test program for rpc stuff. Very basic and simple, but
      they give an idea...


2003-02-15 21:20 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/regex.c
    ! added casts for aslogicals...
    ! comment out basically empty switch statment. (again it seems)
  * source/rtl/hbsrlraw.c
    ! Added a few more casts
  * makefile.vc
  * makefile.nt
    - removed SIMPLEX checks
    + source/rtl/trpccli.prg
    + source/rtl/trpc.prg

2003-02-16 01:00 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/hbserial.prg